fix: aligned login

--- a/style/index.css
+++ b/style/index.css
@@ -105,6 +105,9 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .form-column {
@@ -164,6 +167,7 @@ label {
 
 input {
   width: 100%;
+  border-radius: 10px;
 }
 
 
